layout tweaks to prevent text wrapping

--- a/app/assets/stylesheets/local/phase-banner.scss
+++ b/app/assets/stylesheets/local/phase-banner.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   border-bottom: none;
 
-  p {
+  .phase-banner-inner {
     margin: 0 30px;
     border-bottom: 1px solid $grey-3;
     padding-bottom: 10px;
@@ -17,6 +17,16 @@
       margin: 0 30px;
     }
   }
+
+  p {
+    display: table;
+
+    & > * {
+      display: table-cell;
+      padding-right: 15px;
+    }
+  }
+
   .language-picker {
     @include core-16;
     line-height: inherit;
